{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 369,
  "lineage": "0101bf7a-9e68-a71f-1045-0ce9f180ef09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nile-nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09073501ae8cb63b1",
            "domain": "vpc",
            "id": "eipalloc-07316933c0c9051f3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d71b3e719feae311",
            "private_dns": "ip-172-31-15-95.ec2.internal",
            "private_ip": "172.31.15.95",
            "public_dns": "ec2-44-197-98-222.compute-1.amazonaws.com",
            "public_ip": "44.197.98.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nile-nat1"
            },
            "tags_all": {
              "Name": "nile-nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0133407e358cc1af0",
            "arn": "arn:aws:ec2:us-east-1:960659776212:instance/i-050621a7d3b2209d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050621a7d3b2209d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0516fe5588e471b44",
            "private_dns": "ip-172-31-13-254.ec2.internal",
            "private_ip": "172.31.13.254",
            "public_dns": "ec2-54-237-236-243.compute-1.amazonaws.com",
            "public_ip": "54.237.236.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6cb9e27a09883c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f2137b0c832436b",
            "tags": {
              "Name": "instance1"
            },
            "tags_all": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d01c4980a2bbc5de"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.SG-instance",
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_ami.ubuntu1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "second_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0133407e358cc1af0",
            "arn": "arn:aws:ec2:us-east-1:960659776212:instance/i-089dc7de568cb540c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089dc7de568cb540c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e94f39608222450",
            "private_dns": "ip-172-31-9-218.ec2.internal",
            "private_ip": "172.31.9.218",
            "public_dns": "ec2-18-209-4-166.compute-1.amazonaws.com",
            "public_ip": "18.209.4.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6599a38a2b0db0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f2137b0c832436b",
            "tags": {
              "Name": "instance2"
            },
            "tags_all": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d01c4980a2bbc5de"
            ]
          },
          "dependencies": [
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_ami.ubuntu2",
            "data.aws_availability_zones.available",
            "aws_key_pair.deployer",
            "aws_security_group.SG-instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nile-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:internet-gateway/igw-06b42761d86908735",
            "id": "igw-06b42761d86908735",
            "owner_id": "960659776212",
            "tags": {
              "Name": "nile-gateway"
            },
            "tags_all": {
              "Name": "nile-gateway"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "dependencies": [
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nile-university-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:loadbalancer/app/nile-university-lb/707b8c27738c7d2e",
            "arn_suffix": "app/nile-university-lb/707b8c27738c7d2e",
            "dns_name": "nile-university-lb-754714383.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:960659776212:loadbalancer/app/nile-university-lb/707b8c27738c7d2e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nile-university-lb",
            "security_groups": [
              "sg-0bedf6c8ca1685b13"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f2137b0c832436b"
              },
              {
                "subnet_id": "subnet-08b4566d83a8d8ca8"
              }
            ],
            "subnets": [
              "subnet-00f2137b0c832436b",
              "subnet-08b4566d83a8d8ca8"
            ],
            "tags": {
              "Name": "nile-university-lb"
            },
            "tags_all": {
              "Name": "nile-university-lb"
            },
            "vpc_id": "vpc-02f43af690e22a420",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.SG-loadbalancer",
            "aws_subnet.prod-pub-1",
            "aws_subnet.prod-pub-2",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nile-university-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:listener/app/nile-university-lb/707b8c27738c7d2e/7d79213ed2eb39cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960659776212:listener/app/nile-university-lb/707b8c27738c7d2e/7d79213ed2eb39cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:loadbalancer/app/nile-university-lb/707b8c27738c7d2e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-loadbalancer",
            "aws_subnet.prod-pub-1",
            "aws_subnet.prod-pub-2",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available",
            "aws_lb.nile-university-lb",
            "aws_lb_target_group.nile-university_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "nile_listner_role",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:listener-rule/app/nile-university-lb/707b8c27738c7d2e/7d79213ed2eb39cb/0a9a4dffd390fb61",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960659776212:listener-rule/app/nile-university-lb/707b8c27738c7d2e/7d79213ed2eb39cb/0a9a4dffd390fb61",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:listener/app/nile-university-lb/707b8c27738c7d2e/7d79213ed2eb39cb",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.nile-university_target",
            "aws_security_group.SG-loadbalancer",
            "aws_subnet.prod-pub-1",
            "aws_subnet.prod-pub-2",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available",
            "aws_lb.nile-university-lb",
            "aws_lb_listener.nile-university-listner"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nile-university_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1",
            "arn_suffix": "targetgroup/nile-university/d36e7cb06fbc76c1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nile-university",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nile-university_target"
            },
            "tags_all": {
              "Name": "nile-university_target"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "dependencies": [
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my-alb-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1-20210801210217790100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1",
            "target_id": "i-050621a7d3b2209d7"
          },
          "dependencies": [
            "aws_instance.first_instance",
            "aws_key_pair.deployer",
            "aws_lb_target_group.nile-university_target",
            "aws_security_group.SG-instance",
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_ami.ubuntu1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my-alb-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1-20210801210216968800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960659776212:targetgroup/nile-university/d36e7cb06fbc76c1",
            "target_id": "i-089dc7de568cb540c"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_lb_target_group.nile-university_target",
            "aws_security_group.SG-instance",
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_ami.ubuntu2",
            "data.aws_availability_zones.available",
            "aws_instance.second_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nile-ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07316933c0c9051f3",
            "connectivity_type": "public",
            "id": "nat-03ec5b42660998b70",
            "network_interface_id": "eni-0d71b3e719feae311",
            "private_ip": "172.31.15.95",
            "public_ip": "44.197.98.222",
            "subnet_id": "subnet-00f2137b0c832436b",
            "tags": {
              "Name": "nile-NAT1"
            },
            "tags_all": {
              "Name": "nile-NAT1"
            }
          },
          "dependencies": [
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nile-nat1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gw-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:route-table/rtb-0d18392c9d8e8653e",
            "id": "rtb-0d18392c9d8e8653e",
            "owner_id": "960659776212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b42761d86908735",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_to_internet"
            },
            "tags_all": {
              "Name": "route_to_internet"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nile-gateway",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routing1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:route-table/rtb-0b18e9579e0fd65f6",
            "id": "rtb-0b18e9579e0fd65f6",
            "owner_id": "960659776212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ec5b42660998b70",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-routing1"
            },
            "tags_all": {
              "Name": "private-routing1"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nile-nat1",
            "aws_nat_gateway.nile-ngw1",
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08422f3b674fc366b",
            "route_table_id": "rtb-0d18392c9d8e8653e",
            "subnet_id": "subnet-00f2137b0c832436b"
          },
          "dependencies": [
            "aws_internet_gateway.nile-gateway",
            "aws_route_table.gw-routetable",
            "aws_subnet.prod-pub-1",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b0eda74d1b13cde",
            "route_table_id": "rtb-0d18392c9d8e8653e",
            "subnet_id": "subnet-08b4566d83a8d8ca8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_internet_gateway.nile-gateway",
            "aws_route_table.gw-routetable",
            "aws_subnet.prod-pub-2",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae7c9fa611545f9f",
            "route_table_id": "rtb-0b18e9579e0fd65f6",
            "subnet_id": "subnet-08aefc4e8ca2d0bf0"
          },
          "dependencies": [
            "aws_subnet.prod-pub-1",
            "aws_subnet.prod-pvt-1",
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nile-nat1",
            "aws_nat_gateway.nile-ngw1",
            "aws_route_table.private-routing1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a600acfcf666d0c6",
            "route_table_id": "rtb-0b18e9579e0fd65f6",
            "subnet_id": "subnet-04dd0b9cc51287e32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_eip.nile-nat1",
            "aws_nat_gateway.nile-ngw1",
            "aws_route_table.private-routing1",
            "aws_subnet.prod-pub-1",
            "aws_subnet.prod-pvt-2",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:security-group/sg-0d01c4980a2bbc5de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All Traffic Among VPC Instances",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d01c4980a2bbc5de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow All Traffic Among VPC Instances",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bedf6c8ca1685b13"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-instance",
            "name_prefix": "",
            "owner_id": "960659776212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-instance"
            },
            "tags_all": {
              "Name": "SG-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:security-group/sg-0bedf6c8ca1685b13",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bedf6c8ca1685b13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-loadbalancer",
            "name_prefix": "",
            "owner_id": "960659776212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-loadbalancer"
            },
            "tags_all": {
              "Name": "SG-loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1675970907",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bedf6c8ca1685b13",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-loadbalancer",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "Allow All Traffic Among VPC Instances",
            "from_port": 0,
            "id": "sgrule-3313359976",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d01c4980a2bbc5de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-instance",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All Traffic Among VPC Instances",
            "from_port": 0,
            "id": "sgrule-1143850393",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d01c4980a2bbc5de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-instance",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All Traffic from loadbalancer",
            "from_port": 0,
            "id": "sgrule-4164043703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bedf6c8ca1685b13",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-loadbalancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "to_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1461606278",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d01c4980a2bbc5de",
            "self": false,
            "source_security_group_id": "sg-0bedf6c8ca1685b13",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-instance",
            "aws_security_group.SG-loadbalancer",
            "aws_vpc.nile-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:subnet/subnet-00f2137b0c832436b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-00f2137b0c832436b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960659776212",
            "tags": {
              "Name": "prod-pub-1"
            },
            "tags_all": {
              "Name": "prod-pub-1"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "dependencies": [
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:subnet/subnet-08b4566d83a8d8ca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-08b4566d83a8d8ca8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960659776212",
            "tags": {
              "Name": "prod-pub-2"
            },
            "tags_all": {
              "Name": "prod-pub-2"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "dependencies": [
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pvt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:subnet/subnet-08aefc4e8ca2d0bf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-08aefc4e8ca2d0bf0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960659776212",
            "tags": {
              "Name": "prod-pvt-1"
            },
            "tags_all": {
              "Name": "prod-pvt-1"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "dependencies": [
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pvt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:subnet/subnet-04dd0b9cc51287e32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-04dd0b9cc51287e32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960659776212",
            "tags": {
              "Name": "prod-pvt-2"
            },
            "tags_all": {
              "Name": "prod-pvt-2"
            },
            "vpc_id": "vpc-02f43af690e22a420"
          },
          "dependencies": [
            "aws_vpc.nile-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nile-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960659776212:vpc/vpc-02f43af690e22a420",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d852a5549d7658f0",
            "default_route_table_id": "rtb-06e8edba4b455fe7d",
            "default_security_group_id": "sg-008877edc1c326c02",
            "dhcp_options_id": "dopt-5c915826",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02f43af690e22a420",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06e8edba4b455fe7d",
            "owner_id": "960659776212",
            "tags": {
              "Name": "nile-vpc"
            },
            "tags_all": {
              "Name": "nile-vpc"
            }
          }
        }
      ]
    }
  ]
}